changed counties to countries

--- a/about.html
+++ b/about.html
@@ -20,11 +20,11 @@
   <main>
     <section font="sans-serif" class="about">
       <h2>About Us</h2>
-      <p> SmartHealth-Africa was founded in <strong>2025</strong> by young pharmacist, <strong>Dr. Luke Adik</strong>. With a vision to simplify shopping and make essential products more accessible,it has rapidly grown into a trusted e-commerce platform in Kenya.</p>
+      <p> SmartHealth-Africa was founded in 2025 by young pharmacist, Luke Adik. With a vision to simplify shopping and make essential products more accessible and affordable ,it has rapidly grown into a trusted pharmacy platform in Kenya.</p>
       
-      <p>We are proudly headquartered in <strong>Nairobi, Kenya</strong>, and we deliver our products throughout the entire country, ensuring convenience for our customers wherever they are.</p>
+      <p>We are proudly headquartered in Nairobi, Kenya, and we deliver our products throughout the entire continent, ensuring convenience for our customers wherever they are.</p>
 
-      <p>Currently, we have established physical branches in <strong>12 counties</strong> and have partnered with leading supermarkets and petrol stations to host our outlets within their premises. This strategic expansion allows us to serve you better both online and offline.</p>
+      <p>Currently, we have established physical branches in 12 countres in Africa and have partnered with leading supermarkets and petrol stations to host our outlets within their premises. This strategic expansion allows us to serve you better both online and offline.</p>
 
       <p>At SmartHealth-Africa, our mission is to provide affordable, quality products while offering a seamless and reliable shopping experience to all Kenyans.</p>
     </section>
